--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,15 @@
     
    </ul>
 
+    <footer class="footer">
+    <div class="footer-header">social media presence</div>
+    <ul class="list-non-bullet ">
+        <li class="list-item-inline"><a class="link" href="https://github.com/NISHANT0318">github</a></li>
+        <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/nishant-satone/">linkedin</a></li>
+        <li class="list-item-inline"><a class="link" href="">twitter</a></li>
+    </ul>
+</footer>
+
 
 
 </body>
