--- a/blogs.html
+++ b/blogs.html
@@ -21,5 +21,19 @@
             </li>
         </ul>
     </nav>
+
+      <div class="emptydiv">
+        
+    </div>
+
+    
+    <footer class="footer">
+        <div class="footer-header">social media presence</div>
+        <ul class="list-non-bullet ">
+            <li class="list-item-inline"><a class="link" href="https://github.com/NISHANT0318">github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://www.linkedin.com/in/nishant-satone/">linkedin</a></li>
+            <li class="list-item-inline"><a class="link" href="">twitter</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
