--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header class="hero">
         <img class="hero-img" src="hero.svg" alt="">
-        <h3 class="hero-heading">Nishant the <span class="heading-inverted">Web developer</span></h3>
+        <h3 class="hero-heading">Welcome to<span class="heading-inverted">the portfolio</span></h3>
     </header>
 
     <section class="section ow">
