--- a/projects.html
+++ b/projects.html
@@ -57,6 +57,22 @@
             </div>
          </section>
     </li>
+
+       <li>
+        <section class="showcase-text section ow">
+            <div class="  container container-center">
+             <h1>Interactive Web Calculator</h1>
+             <small>September,2023</small>
+             <p>Experience the power of interactive web development with my Interactive Web Calculator. This fully functional calculator is not just a simple arithmetic tool; it's a showcase of my front-end skills in action. Try it out for yourself and see how it can make your daily calculations a breeze.</p>
+             <a class="link
+             link-primary project-bt" href="https://nishantscalculator.netlify.app/">Try It Now</a>
+             <a class="link
+             link-secondary project-bt" href="https://github.com/NISHANT0318/Calculator">View Source</a>
+             
+
+            </div>
+         </section>
+    </li>
     
    </ul>
 
