--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li class="list-item-inline">
                 <a class="link" href="blogs.html">blogs</a>
             </li>
+            <li class="list-item-inline">
+                <a class="link" href="https://drive.google.com/file/d/1i5JvwwlWu2i65n4_BNggfnzZ27FyHDke/view?usp=drive_link" target="_blank">Resume</a>
+            </li>
         </ul>
     </nav>
 
