--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,22 @@
          </section>
     </li>
 
+     <li>
+        <section class="showcase-text section ow">
+            <div class="  container container-center">
+             <h1>Custom Browser</h1>
+             <small>Feb,2024</small>
+             <p>Certainly! **Custom Browser Tabs** This project provides a simple browser tab management system using HTML, CSS, and JavaScript. Users can create, switch between, and close tabs, with each tab maintaining its own URL state. The interface includes an input field for entering URLs.</p>
+             <a class="link
+             link-primary project-bt" href="https://custom-browser.netlify.app/">Live Project</a>
+             <a class="link
+             link-secondary project-bt" href="https://github.com/NISHANT0318/Custom-Browser">View Source</a>
+             
+
+            </div>
+         </section>
+    </li>   
+
        <li>
         <section class="showcase-text section ow">
             <div class="  container container-center">
