--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="link" href="blogs.html">blogs</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="https://drive.google.com/file/d/1Qugw8dpf_aOLfAQsZ_aOwbRIesr_Jp8F/view?usp=drive_link" target="_blank">resume</a>
+                <a class="link" href="https://drive.google.com/file/d/1n-IOvPIf6NVMFCpFilZ-QLqhIt2F9s6n/view?usp=sharing">resume</a>
             </li>
         </ul>
     </nav>
