--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,21 @@
          </section>
     </li>
 
+    <li>
+        <section class="showcase-text section ow">
+            <div class="  container container-center">
+             <h1>PassGen -A Password Generator</h1>
+             <small>January,2024</small>
+             <p>"Welcome to PassGen – Your ultimate password generator app! Tailor password length, include numbers, and special characters effortlessly with React hooks like useState, useCallback, and useEffect. Copy your secure password instantly. Strengthen your online security with PassGen today!"</p>
+             <a class="link
+             link-primary project-bt" href="https://ns-passwordgenerator.netlify.app/">Live Project</a>
+             
+             
+
+            </div>
+         </section>
+    </li>   
+
      <li>
         <section class="showcase-text section ow">
             <div class="  container container-center">
